--- a/now.json
+++ b/now.json
@@ -1,9 +1,20 @@
 {
     "version": 2,
-    "alias": [ "srv.ex-online-server-01.gq.c1i44.now.sh" ],
-    "builds": [
-        { "src": "www/**/*", "use": "@now/static" },
-        { "src": "api/**/*.js", "use": "@now/node" }
+    "name": "ex-online-server-one",
+    "alias": [
+        "srv.ex-online-server-01.gq.c1i44.now.sh"
     ],
-    "routes": [ { "src": "/", "dest": "www/index.html" } ]
+    "builds": [ {
+            "src": "www/**/*",
+            "use": "@now/static"
+        },
+        {
+            "src": "api/**/*.js",
+            "use": "@now/node"
+        }
+    ],
+    "routes": [ {
+        "src": "/",
+        "dest": "www/index.html"
+    } ]
 }
