--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ziet-serverless-apis",
+    "name": "zeit-serverless-apis",
     "version": "0.0.0",
     "description": "API container",
     "main": "index.js",
@@ -20,5 +20,8 @@
     "bugs": {
         "url": "https://github.com/CliffCrerar/zeit-cloud-micro-srv-controller/issues"
     },
-    "homepage": "https://github.com/CliffCrerar/zeit-cloud-micro-srv-controller#readme"
+    "homepage": "https://github.com/CliffCrerar/zeit-cloud-micro-srv-controller#readme",
+    "dependencies": {
+        "browser-request": "^0.3.3"
+    }
 }
